[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soils_pack"
version = "0.0.1"
authors = [
    { name="R.Jimenez", email="jimenezhuancarodrigo@gmail.com" },
]
description = "A small soils package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Rodrigo-A-Jimenez/soils_pack"
"Bug Tracker" = "https://github.com/Rodrigo-A-Jimenez/soils_pack/issues"